--- a/config/cfg.yaml
+++ b/config/cfg.yaml
@@ -9,3 +9,13 @@ yunxiyuan: true
 xiaofeifengkong: true
 qlnc: false
 lx: 0
+one: false
+two: false
+three: false
+four: false
+five: false
+six: false
+seven: false
+eight: false
+nine: false
+ten: false
