--- a/config/mastercfg.yaml
+++ b/config/mastercfg.yaml
@@ -9,7 +9,16 @@ seettuuplusmaster: false
 #云溪院随机图
 yunxiyuanmaster: false
 
-
+one: false
+two: false
+three: false
+four: false
+five: false
+six: false
+seven: false
+eight: false
+nine: false
+ten: false
 
 
 
