--- a/config/number.yaml
+++ b/config/number.yaml
@@ -7,6 +7,13 @@ yifensuijimanghe: 20
 asuijimanhua: 20
 yuanmangheshen: 20
 yunxiyuan: 15
-
+three: 20
+four: 20
+five: 20
+six: 20
+seven: 20
+eight: 20
+nine: 20
+ten: 20
 
 
