支持锅巴增减黑名单群，应该是开学前最后一个了

--- a/config/blacklist.yaml
+++ b/config/blacklist.yaml
@@ -1,5 +1,4 @@
-#此文件为群聊黑名单配置，影响功能：铯图，三铯图，原神cos图，清凉图，原神铯图
-#请严格按照下方格式添加（一个空格 一个- 一个空格 加群聊号）下面有实例
- - 123456
- - 456789
- - 123456789
+groups:
+  - 123456
+  - 456789
+  - 123456789
